# 3d_face_reconstruction

./: BaselModelReader.h  CMakeLists.txt  Exercise_4.vcxproj  ICPOptimizer.h  ModelFittingOptimizer.h  PointCloud.h  ProcrustesAligner.h  README.md  RGBDDataLoader.h  SimpleMesh.h  main_final4z.cpp  pcdreader.h
